# SatelliteClassifier

./: README.md  app.py  pyproject.toml  replit.md  requirements.txt  streamlit_cloud_config.toml
.streamlit/: config.toml
utils/: accuracy_assessment.py  area_calculator.py  image_processor.py  ml_classifier.py  visualization.py
