[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.46.1",
    "rasterio>=1.4.3",
    "numpy>=2.3.1",
    "folium>=0.20.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "matplotlib>=3.10.3",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
]
